--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.2.1",
+    "nodemailer": "^7.0.10",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -74,4 +75,3 @@
     "typescript": "^5.3.3"
   }
 }
-
